Layout Issues in Mobile version of navbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 
 :root {
   --background: #faf4db;
-  --text: #1c2b3b;
+  --textcol: #1c2b3b;
   --primary: #24487a;
 	--secondary: #dab9a0;
 	--accent: #912310;
@@ -12,7 +12,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --text: #faf4db;
+    --textcol: #faf4db;
     --background: #101923;
     --primary: #7fa9dc;
     --secondary: #c19c7b;
@@ -24,6 +24,6 @@
 
 body {
   background: var(--background);
-  color: var(--text);
+  color: var(--textcol);
   font-family: Arial, Helvetica, sans-serif;
 }
